# predictive-natural-selection

./: .gitignore  DEMO_CHECKLIST.md  DEMO_SUMMARY.md  FITNESS_FUNCTION_RATIONALE.md  ISSUES_AND_RED_FLAGS.md  PLAN.md  README.md  analyze_comprehensive_results.py  analyze_previous_gen_results.py  blog-draft.html  blog-draft.md  compare_frontier_vs_previous_gen.py  pyproject.toml  run_claude_opus.sh  run_comprehensive_experiment.sh  run_deepseek_sequential.sh  run_multi_model.sh  run_multi_seed.sh  run_previous_gen_experiment.sh
data/comprehensive_experiment/: analysis_results.json
data/comprehensive_experiment/claude_opus_4_5_seed42/: evolution_run.json
data/comprehensive_experiment/claude_opus_4_5_seed43/: evolution_run.json
data/comprehensive_experiment/claude_opus_4_5_seed44/: evolution_run.json
data/comprehensive_experiment/deepseek_v3_seed42/: evolution_run.json
data/comprehensive_experiment/deepseek_v3_seed43/: evolution_run.json
data/comprehensive_experiment/deepseek_v3_seed44/: evolution_run.json
data/model_comparison/: all_results.json
data/previous_gen_experiment/: analysis_results.json
docs/hackathon/: ADDRESSING_THE_GAP.md  DEMO_READY.md  HACKATHON_CONTEXT.md  PRESENTATION_SCRIPT.md  V0_PROMPT.md
docs/research/: CONTEXT_FOR_ANALYSIS.md
examples/: custom_tasks.json
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  (+1 more)
scripts/: run_model_comparison.py
src/: api.py  evaluator.py  evolution.py  genome.py  main.py  orchestrator.py  population_store.py  tasks.py  validation.py  visualization.py  weave_integration.py
(+145 files in other folders)
