[project]
name = "predictive-natural-selection"
version = "0.1.0"
description = "Evolving LLM agent strategies through natural selection on predictive fitness"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "redis>=5.0.0",
    "openai>=1.50.0",
    "weave>=0.51.0",
    "wandb>=0.19.0",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
marimo = ["marimo>=0.9.0"]

[project.scripts]
evolve = "src.main:app"

[tool.ruff]
line-length = 100
